localization/v2.0.x/site/en/reference/architecture/architecture_overview.md
---
id: architecture_overview.md
summary: >-
  Milvus provides a fast, reliable, and stable vector database built
  specifically for similarity search and artificial intelligence.
title: ''
---
<h1 id="Milvus-Architecture-Overview" class="common-anchor-header">Milvus Architecture Overview<button data-href="#Milvus-Architecture-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Built on top of popular vector search libraries including Faiss, Annoy, HNSW, and more, Milvus was designed for similarity search on dense vector datasets containing millions, billions, or even trillions of vectors. Before proceeding, familiarize yourself with the <a href="/docs/v2.0.x/glossary.md">basic principles</a> of embedding retrieval.</p>
<p>Milvus also supports data sharding, data persistence, streaming data ingestion, hybrid search between vector and scalar data, time travel, and many other advanced functions. The platform offers performance on demand and can be optimized to suit any embedding retrieval scenario. We recommend deploying Milvus using Kubernetes for optimal availability and elasticity.</p>
<p>Milvus adopts a shared-storage architecture featuring storage and computing disaggregation and horizontal scalability for its computing nodes. Following the principle of data plane and control plane disaggregation, Milvus comprises <a href="/docs/v2.0.x/four_layers.md">four layers</a>: access layer, coordinator service, worker node, and storage. These layers are mutually independent when it comes to scaling or disaster recovery.</p>
<p>
  <span class="img-wrapper">
    <img translate="no" src="/docs/v2.0.x/assets/architecture_diagram.png" alt="Architecture_diagram" class="doc-image" id="architecture_diagram" />
    <span>Architecture_diagram</span>
  </span>
</p>
<p>For more details about Milvus’ architecture, see <a href="/docs/v2.0.x/four_layers.md">Computing/Storage Disaggregation</a> and <a href="/docs/v2.0.x/main_components.md">Main Components</a>.</p>
